apps/haenu/tewind-space/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tewind-space
  namespace: haenu
  labels:
    app: tewind-space
spec:
  selector:
    matchLabels:
      app: tewind-space
  template:
    metadata:
      labels:
        app: tewind-space
    spec:
      containers:
      - name: tewind-space
        image: hyeonwoo5342/tewind-space:4
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: '150Mi'
            cpu: '50m'
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 25
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
