apps/haenu/tewind-space/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tewind-space
  namespace: haenu
  labels:
    app: tewind-space
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: tewind-space
