apps/haenu/tewind-space/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tewind-space-ingress
  namespace: haenu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: space.tewind.kr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tewind-space
            port:
              number: 3000
